k8s/dataset-register-qlever/service.yml
apiVersion: v1
kind: Service
metadata:
  name: dataset-register-qlever
spec:
  ports:
    - port: 80
      targetPort: 7001
  selector:
    app: dataset-register-qlever
